--- a/week-07/promise-practice/challenge-2/index.html
+++ b/week-07/promise-practice/challenge-2/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge 2 | Promise practice</title>
-  </head>
-  <body>
-    <h1>Open the console</h1>
-    <script>
-      // write your code here
-    </script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Challenge 2 | Promise practice</title>
+</head>
+
+<body>
+  <h1>Open the console</h1>
+  <script>
+    // write your code here
+    fetch("https://pokeapi.co/api/v2/pokemon/pikachu")
+      .then((response) => response.json())
+      .then((pikachu) => fetch(pikachu.species.url))
+      .then((response) => response.json())
+      .then((pikachu) => fetch(pikachu.shape.url))
+      .then((response) => response.json())
+      .then((finalResponse) => console.log(finalResponse))
+
+    // const speciesUrl = fetch(pokePromise.species.url)
+  </script>
+</body>
+
 </html>
