--- a/week-09/learn-testing/workshop.html
+++ b/week-09/learn-testing/workshop.html
@@ -17,15 +17,47 @@
     }
 
     // test
-    function test(fn, val, exp) {
-      if (fn(val) === exp) {
-        console.log(`%cPassed: expected ${exp} and returned ${fn(val)}`, 'background: green');
+
+    function equal(expected, actual, message) {
+      if (expected === actual) {
+        const defaultMessage = `Expected ${expected} and received ${actual}`;
+        console.info("Pass: " + (message || defaultMessage));
       } else {
-        console.error(`%cFailed: expected ${exp} but returned ${fn(val)}`, 'background: red')
+        const defaultMessage = `Expected ${expected} but received ${actual} instead`;
+        console.error("Fail: " + (message || defaultMessage));
       }
     }
 
-    test(square, 2, 4)
+    function notEqual(actual, expected, message) {
+      if (actual !== expected) {
+        const defaultMessage = `${expected} is different to ${actual}`;
+        console.info("Pass: " + (message || defaultMessage));
+      } else {
+        const defaultMessage = `${expected} is the same as ${actual}`;
+        console.error("Fail: " + (message || defaultMessage));
+      }
+    }
+
+    function test(name, testFunction) {
+      console.group(name);
+      testFunction();
+      console.groupEnd(name);
+    }
+
+    // our tests
+    test("Correctly squares integers", () => {
+      const result = square(2);
+      const expected = 4;
+      equal(result, expected);
+      equal(result, 2); // this one will fail
+      notEqual(result, 5);
+    });
+
+    test("Correctly squares decimals", () => {
+      const result = square(2.23);
+      const expected = 4.9729;
+      equal(result, expected);
+    });
   </script>
 </body>
 
